--- a/package.json
+++ b/package.json
@@ -17,11 +17,11 @@
         "@types/node": "20.4.9",
         "@types/react": "18.2.19",
         "@types/react-dom": "18.2.7",
-        "autoprefixer": "10.4.14",
+        "autoprefixer": "^10.4.20",
         "eslint": "^8.46.0",
         "eslint-config-next": "13.4.13",
         "next": "13.4.13",
-        "postcss": "8.4.27",
+        "postcss": "^8.4.47",
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-hook-form": "^7.47.0",
@@ -29,7 +29,7 @@
         "react-toastify": "^9.1.3",
         "sass": "^1.66.1",
         "swiper": "^10.2.0",
-        "tailwindcss": "3.3.3",
+        "tailwindcss": "^3.4.13",
         "typescript": "5.1.6",
         "zod": "^3.22.4"
     },
